dev/linkerd/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: linkerd-host-header
spec:
  headers:
    customRequestHeaders:
       Host: "localhost"
---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grpcweb-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /grpc-web
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: linkerd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`linkerd.veidemann.test`)
      kind: Rule
      services:
        - name: linkerd-web
          namespace: linkerd
          port: 8084
      middlewares:
        - name: linkerd-host-header
  tls: {}
